testcases/error/invalid_import.veryl
module invalid_import {
    let a: logic = 0;
    import a::*;
}
